# fax

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_decode_g3/: crash-2f358fb908ecfd874f54c4d25261b2b272c5f5ef  crash-64e4eeefbcf0bbf3b08fcc941f96fd58a2b5ce8c  crash-c531b6bbcff661d39e7fba23a6e2c6abd059d783  minimized-from-275c276406e00ffe9fcbc71d1d3eb6e4ac852325  minimized-from-59b29799fdafedfc0f724dc6d7673f4ecea4d40c  minimized-from-64e4eeefbcf0bbf3b08fcc941f96fd58a2b5ce8c
fuzz/artifacts/fuzz_decode_g4/: crash-24e5ddc7e92b772a6d6c6491507b17afdd6cbff8  crash-67e22292d873e0474710d88fff35b80e41457925
fuzz/artifacts/fuzz_roundtrip_g4/: crash-017a61476f8197ea7f0013481c0b547ccb938c86  crash-287ab050a0e74184a12fe7961ab9ee86b014102e  crash-298faa5ce0c7a8fc6d9d87b71e95222d4af7bc65  crash-63e1d30b7f679f5b255cd3ea70637332610f5082  crash-730eb653d29bfd70fc048c6b1b67808abcf39eec  crash-a96c7c848298c46b6c61e014e2847774ef1231f2  crash-ad28bc247d23326ff80bcd60c03fe6a1f4864c17  crash-b0d4cad408fe0ab88aced05b9b0b0d94bb2f8a62  crash-c59189401ca7f733a568f17e9ae880da9ea89c4f  crash-d1bb48de9c1419995b3ecb0e637759857259e974  crash-deac96c9082b1304edb761913dc40c25d15d0f46  crash-fdd9a6a8f5f252b48b43a4dbb10cbf520213f89b  crash-ff148456e7da9a69b38667ed2be79385a7df7e91
fuzz/dict/: ccitt.dict
fuzz/fuzz_targets/: fuzz_decode_g3.rs  fuzz_decode_g4.rs  fuzz_roundtrip_g4.rs
fuzz/regression/fuzz_roundtrip_g4/: crash-a6741002ce63dbc241099ecb27ca55c56ae34eca
scripts/: regen-hashes.sh
src/: decoder.rs  lib.rs  maps.rs
test-files/: reference-hashes.tsv
(+2 files in other folders)
