[package]
name = "fax-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.fax]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_decode_g3"
path = "fuzz_targets/fuzz_decode_g3.rs"
doc = false

[[bin]]
name = "fuzz_decode_g4"
path = "fuzz_targets/fuzz_decode_g4.rs"
doc = false
